# mbeezygpt

./: .gitignore  LICENSE  README.md  mb_input.txt  model.py  params.yml  pyproject.toml  sample.py  scraper.py  train.py
config/: train_mbeezy.py
data/mbeezy/: prepare.py  readme.md
src/: blocks.py  communication.py  computation.py  main.py  models.py  utils.py
src/main.egg-info/: PKG-INFO
src/mbeezygpt/: blocks.py  computation.py  main.py  models.py  params.yml  utils.py
src/mbeezygpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mbeezygpt/save/: itot  model.pt  tokens  ttoi
src/nanogpt/: computation.py  main.py
