[project]
name = "mbeezy"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

authors = [
  { name = "Dominik Bell"},
  { email = "bell.dominik@gmail.de"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    ]

dependencies = [
    'numpy',
    'pytest',
    'tqdm',
    'torch',
    'lxml',
]

[project.scripts]
mbeezy = "nanogpt.main:main"
