[project]
name = "mbeezygpt"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
  { name = "Dominik Bell"},
  { email = "bell.dominik@gmail.de"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    ]

dependencies = [
    'numpy',
    'pytest',
    'tqdm',
    'torch',
    'lxml',
    'pyyaml',
]

[project.scripts]
mbeezy = "mbeezygpt.main:main"
